add refernce to the new class library handel the sql

--- a/BlazorInventor/_Imports.razor
+++ b/BlazorInventor/_Imports.razor
@@ -11,7 +11,7 @@
 @using BlazorInventor.Model;
 @using BlazorInventor.Component
 
-
+@*Models to use Mongo DB*@
 @using DBInventorLibrary.Models;
 @using DBInventorLibrary.Models.MaterialsModels;
 @using DBInventorLibrary.Models.WagensModel;
@@ -20,3 +20,9 @@
 @using DBInventorLibrary.Models.Inventor
 
 @using MongoDBConnectionClassLibrary.Data_Services
+
+@* @using EntityDBClassLibrary
+@using EntityDBClassLibrary.Models.Materials
+@using EntityDBClassLibrary.Models.Wagen
+@using EntityDBClassLibrary.Models.Bands
+@using Microsoft.EntityFrameworkCore *@
